// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventDataSection renders formatted 1`] = `
<DataSection
  className=""
>
  <SectionHeader
    id="extra"
    isCentered={false}
  >
    <Permalink
      className="permalink"
      href="#extra"
    >
      <em
        className="icon-anchor"
      />
    </Permalink>
    <h3>
      Additional Data
    </h3>
    <ButtonBar
      active="formatted"
      merged={true}
    >
      <forwardRef<Button>
        barId="formatted"
        onClick={[Function]}
        size="xsmall"
      >
        Formatted
      </forwardRef<Button>>
      <forwardRef<Button>
        barId="raw"
        onClick={[Function]}
        size="xsmall"
      >
        Raw
      </forwardRef<Button>>
    </ButtonBar>
  </SectionHeader>
  <SectionContents />
</DataSection>
`;

exports[`EventDataSection renders raw 1`] = `
<DataSection
  className=""
>
  <SectionHeader
    id="extra"
    isCentered={false}
  >
    <Permalink
      className="permalink"
      href="#extra"
    >
      <em
        className="icon-anchor"
      />
    </Permalink>
    <h3>
      Additional Data
    </h3>
    <ButtonBar
      active="raw"
      merged={true}
    >
      <forwardRef<Button>
        barId="formatted"
        onClick={[Function]}
        size="xsmall"
      >
        Formatted
      </forwardRef<Button>>
      <forwardRef<Button>
        barId="raw"
        onClick={[Function]}
        size="xsmall"
      >
        Raw
      </forwardRef<Button>>
    </ButtonBar>
  </SectionHeader>
  <SectionContents />
</DataSection>
`;

exports[`KeyValueList renders formatted 1`] = `
<table
  className="table key-value"
>
  <tbody>
    <tr
      key="andthis"
    >
      <TableData
        className="key"
        wide={false}
      >
        andthis
      </TableData>
      <td
        className="val"
      >
        <ContextData
          data={0}
          withAnnotatedText={false}
        />
      </td>
    </tr>
    <tr
      key="plussomeotherstuff"
    >
      <TableData
        className="key"
        wide={false}
      >
        plussomeotherstuff
      </TableData>
      <td
        className="val"
      >
        <ContextData
          data="here"
          withAnnotatedText={false}
        />
      </td>
    </tr>
    <tr
      key="somestuff"
    >
      <TableData
        className="key"
        wide={false}
      >
        somestuff
      </TableData>
      <td
        className="val"
      >
        <ContextData
          data={
            Object {
              "andsomeotherstuff": "here",
            }
          }
          withAnnotatedText={false}
        />
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`KeyValueList renders raw 1`] = `
<table
  className="table key-value"
>
  <tbody>
    <tr
      key="andthis"
    >
      <TableData
        className="key"
        wide={false}
      >
        andthis
      </TableData>
      <td
        className="val"
      >
        <ContextData
          data="0"
          withAnnotatedText={false}
        />
      </td>
    </tr>
    <tr
      key="plussomeotherstuff"
    >
      <TableData
        className="key"
        wide={false}
      >
        plussomeotherstuff
      </TableData>
      <td
        className="val"
      >
        <ContextData
          data="\\"here\\""
          withAnnotatedText={false}
        />
      </td>
    </tr>
    <tr
      key="somestuff"
    >
      <TableData
        className="key"
        wide={false}
      >
        somestuff
      </TableData>
      <td
        className="val"
      >
        <ContextData
          data="{\\"andsomeotherstuff\\":\\"here\\"}"
          withAnnotatedText={false}
        />
      </td>
    </tr>
  </tbody>
</table>
`;
